--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import "tailwindcss";
 
 *{
   margin:0;
@@ -8,21 +6,14 @@
   box-sizing:border-box;
 }
 
-h1{
-    font-size:2rem;
-    margin-bottom:20px;
-    text-align: center;
-    color:#ffffff;
-    padding: 10px;
-}
-h2{
-    font-size:1.5rem;
-    margin-bottom:15px;
-    text-align: center;
-    color:#fafafa;
-    padding: 10px;
-}
 
+
+
+@layer components {
+  .heading-2 {
+    @apply text-[30px] text-shadow-lg/50 ;
+  }
+}
 
 body
 {
@@ -41,6 +32,7 @@ img{
     height:150px;
     object-fit:cover;
 }
+
 
 /*FORM AREA IN CONTACT*/
 
