--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,37 +1,40 @@
-nav {
+.navbar {
     background-color: #000000;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: left;
-    padding-left:10px;
+    padding-left: 10px;
+    position: fixed; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
-ul {
+.navbar ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
+    position:fixed;
+    top: 0;
+    left: 60px;
+}
+.navbar li {
+    color: white;
+    text-align: center;
+    padding: 14px 15px;
 }
 
-li {
-    padding: 14px 10px;
-}
-
-li:hover {
+.navbar li:hover {
     text-decoration: underline;
     cursor: pointer;
     filter: brightness(50%);
 }
 
-a {
-    color: white;
-    text-align: center;
-    padding: 0px 10px;
-    text-decoration: none;
-}
 
-a.active {
+.navbar a.active {
     color: #00C6A7;
     text-decoration: underline;
     font-weight: bold;
@@ -40,10 +43,12 @@ a.active {
 .company-logo {
     display: flex;
     align-items: center;
+    
 }
 
 .logo-image {
     width: 45px;
     height: auto;
     background-color: white;
+    
 }
